--- a/capstone_one.ipynb
+++ b/capstone_one.ipynb
@@ -1314,7 +1314,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1361,6 +1363,48 @@
     "    scores = cross_val_score(models[i], X_train, y_train, cv=3)\n",
     "    unbalset[i] = scores\n",
     "    print(i, scores, np.mean(scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(LogisticRegression(C=0.001, class_weight=None, dual=False, fit_intercept=True,\n",
+       "           intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+       "           n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
+       "           tol=0.0001, verbose=0, warm_start=False),\n",
+       " {'C': 0.001},\n",
+       " 0.8471120780405642)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clfl2=LogisticRegression(solver='lbfgs')\n",
+    "parameters = {\"C\":  [0.001, 0.1, 1, 10, 100]}\n",
+    "fitmodel = GridSearchCV(clfl2, param_grid=parameters, cv=5, scoring=\"accuracy\")\n",
+    "fitmodel.fit(X_train, y_train)\n",
+    "fitmodel.best_estimator_, fitmodel.best_params_, fitmodel.best_score_\n",
+    "#fitmodel.grid_scores_"
    ]
   },
   {
