--- a/capstone_one.ipynb
+++ b/capstone_one.ipynb
@@ -1409,6 +1409,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': 800}\n",
+      "0.8373219173275318\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = {'n_estimators': [50, 100, 200, 400, 600, 800]}\n",
+    "grid_search = GridSearchCV(RandomForestClassifier(), param_grid=params,\n",
+    "                                   scoring='accuracy', cv=5, n_jobs=-1)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "print(grid_search.best_params_)\n",
+    "print(grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
