--- a/capstone_one.ipynb
+++ b/capstone_one.ipynb
@@ -982,12 +982,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Grid search CV\n",
-    "0.7 auc for the prediction"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1007,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1122,7 @@
        "4  17.94          0.0      Fully Paid  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,18 +1139,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>funded_amnt</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>emp_length</th>\n",
+       "      <th>home_ownership</th>\n",
+       "      <th>purpose</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>delinq_2yrs</th>\n",
+       "      <th>loan_status_new</th>\n",
+       "      <th>int_rate_new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>credit_card</td>\n",
+       "      <td>27.65</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fully Paid</td>\n",
+       "      <td>10.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>car</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Charged Off</td>\n",
+       "      <td>15.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>small_business</td>\n",
+       "      <td>8.72</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fully Paid</td>\n",
+       "      <td>15.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>other</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fully Paid</td>\n",
+       "      <td>13.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1 year</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>other</td>\n",
+       "      <td>17.94</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fully Paid</td>\n",
+       "      <td>12.69</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   funded_amnt grade emp_length home_ownership         purpose    dti  \\\n",
+       "0       5000.0     B  10+ years           RENT     credit_card  27.65   \n",
+       "1       2500.0     C   < 1 year           RENT             car   1.00   \n",
+       "2       2400.0     C  10+ years           RENT  small_business   8.72   \n",
+       "3      10000.0     C  10+ years           RENT           other  20.00   \n",
+       "4       3000.0     B     1 year           RENT           other  17.94   \n",
+       "\n",
+       "   delinq_2yrs loan_status_new  int_rate_new  \n",
+       "0          0.0      Fully Paid         10.65  \n",
+       "1          0.0     Charged Off         15.27  \n",
+       "2          0.0      Fully Paid         15.96  \n",
+       "3          0.0      Fully Paid         13.49  \n",
+       "4          0.0      Fully Paid         12.69  "
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#df1['emp_length']=df1['emp_length'].apply(lambda x: str(x.split(' ')[0]))\n",
-    "df1['int_rate_new']=df1['int_rate'].apply(lambda x: float(x.split('.')[0]))\n",
-    "df1.drop(['int_rate'],axis=1, inplace = True)"
+    "df1['int_rate_new']=df1['int_rate'].apply(lambda x: float(x.split('%')[0]))\n",
+    "df1.drop(['int_rate'],axis=1, inplace = True)\n",
+    "df1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1162,16 +1280,16 @@
        "Name: loan_status_new, dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#df1['loan_status_new']=df1['loan_status_new'].astype('category').cat.codes\n",
+    "df1['loan_status_new']=df1['loan_status_new'].astype('category').cat.codes\n",
     "#cleanup_nums = {\"loan_status_new\":{\"Fully Paid\": 1, \"Charged Off\": 0}}\n",
     "#df1.replace(cleanup_nums,inplace=True)\n",
-    "df1.replace({'Fully Paid': 1, 'Charged Off': 0})\n",
+    "#df1.replace({'Fully Paid': 1, 'Charged Off': 0})\n",
     "\n",
     "df1.head()\n",
     "df1['loan_status_new'].value_counts()"
@@ -1179,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1192,12 +1310,12 @@
        "purpose             object\n",
        "dti                float64\n",
        "delinq_2yrs        float64\n",
-       "loan_status_new      int64\n",
+       "loan_status_new       int8\n",
        "int_rate_new       float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1335,7 @@
        "funded_amnt                   float64\n",
        "dti                           float64\n",
        "delinq_2yrs                   float64\n",
-       "loan_status_new                 int64\n",
+       "loan_status_new                  int8\n",
        "int_rate_new                  float64\n",
        "grade_B                         uint8\n",
        "grade_C                         uint8\n",
@@ -1256,7 +1374,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,54 +1395,47 @@
     "X= df2.drop('loan_status_new', axis=1)\n",
     "y = df2['loan_status_new']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 204,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8522476312602408\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
-    "clf = LogisticRegression()\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "#clf = LogisticRegression()\n",
     "# Fit the model on the trainng data.\n",
-    "clf.fit(X_train, y_train)\n",
+    "#clf.fit(X_train, y_train)\n",
     "# Print the accuracy from the testing data.\n",
-    "print(accuracy_score(clf.predict(X_test), y_test))"
+    "#print(roc_auc_score(clf.predict(X_test), y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 205,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
+      "  warnings.warn(\"Variables are collinear.\")\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA [0.84578947 0.84577324 0.84524687] 0.8456031936879782\n",
-      "MNB [0.83884211 0.84082535 0.83177177] 0.8371464069163329\n",
-      "RF [0.83378947 0.83703548 0.83703548] 0.8359534761738541\n"
+      "LDA [0.84518632 0.84624427 0.84318796] 0.8448728498099604\n",
+      "MNB [0.83872105 0.84389326 0.8355472 ] 0.839387171349085\n",
+      "RF [0.8381333  0.83977901 0.84036676] 0.8394263547666627\n"
      ]
     },
     {
@@ -1343,7 +1454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR [0.84705263 0.8471418  0.8471418 ] 0.8471120801266245\n"
+      "LR [0.84647937 0.84647937 0.84647937] 0.8464793699306453\n"
      ]
     }
    ],
@@ -1367,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1379,29 +1490,33 @@
       "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
       "  \"of iterations.\", ConvergenceWarning)\n",
       "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
       "  \"of iterations.\", ConvergenceWarning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(LogisticRegression(C=0.001, class_weight=None, dual=False, fit_intercept=True,\n",
+       "(LogisticRegression(C=1e-05, class_weight=None, dual=False, fit_intercept=True,\n",
        "           intercept_scaling=1, max_iter=100, multi_class='warn',\n",
        "           n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
        "           tol=0.0001, verbose=0, warm_start=False),\n",
-       " {'C': 0.001},\n",
-       " 0.8471120780405642)"
+       " {'C': 1e-05},\n",
+       " 0.6433033045737886)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clfl2=LogisticRegression(solver='lbfgs')\n",
-    "parameters = {\"C\":  [0.001, 0.1, 1, 10, 100]}\n",
-    "fitmodel = GridSearchCV(clfl2, param_grid=parameters, cv=5, scoring=\"accuracy\")\n",
+    "parameters = {\"C\":  [0.0000001,0.00001, 0.0001, 0.001, 0.1, 1, 10, 100]}\n",
+    "fitmodel = GridSearchCV(clfl2, param_grid=parameters, cv=5, scoring=\"roc_auc\")\n",
     "fitmodel.fit(X_train, y_train)\n",
     "fitmodel.best_estimator_, fitmodel.best_params_, fitmodel.best_score_\n",
     "#fitmodel.grid_scores_"
@@ -1409,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1417,14 +1532,68 @@
      "output_type": "stream",
      "text": [
       "{'n_estimators': 800}\n",
-      "0.8373219173275318\n"
+      "0.6350752235120887\n"
      ]
     }
    ],
    "source": [
-    "params = {'n_estimators': [50, 100, 200, 400, 600, 800]}\n",
+    "params = {'n_estimators': [600,800,1000]}\n",
     "grid_search = GridSearchCV(RandomForestClassifier(), param_grid=params,\n",
-    "                                   scoring='accuracy', cv=5, n_jobs=-1)\n",
+    "                                   scoring='roc_auc', cv=5, n_jobs=-1)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "print(grid_search.best_params_)\n",
+    "print(grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_components': 1}\n",
+      "0.6758136727724052\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = {'n_components': [1,2,3] }\n",
+    "grid_search = GridSearchCV(LinearDiscriminantAnalysis(), param_grid=p,\n",
+    "                                   scoring='roc_auc', cv=5, n_jobs=-1)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "print(grid_search.best_params_)\n",
+    "print(grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alpha': 0}\n",
+      "0.6159323482807052\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
+      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pa = {'alpha':[0,0.1,1]}\n",
+    "grid_search = GridSearchCV(MultinomialNB(), param_grid=pa,\n",
+    "                                   scoring='roc_auc', cv=5, n_jobs=-1)\n",
     "grid_search.fit(X_train, y_train)\n",
     "print(grid_search.best_params_)\n",
     "print(grid_search.best_score_)"
