--- a/capstone_one.ipynb
+++ b/capstone_one.ipynb
@@ -990,11 +990,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, KFold,cross_val_predict\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -1326,124 +1326,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "funded_amnt                   float64\n",
-       "dti                           float64\n",
-       "delinq_2yrs                   float64\n",
-       "loan_status_new                  int8\n",
-       "int_rate_new                  float64\n",
-       "grade_B                         uint8\n",
-       "grade_C                         uint8\n",
-       "grade_D                         uint8\n",
-       "grade_E                         uint8\n",
-       "grade_F                         uint8\n",
-       "grade_G                         uint8\n",
-       "emp_length_1 year               uint8\n",
-       "emp_length_10+ years            uint8\n",
-       "emp_length_2 years              uint8\n",
-       "emp_length_3 years              uint8\n",
-       "emp_length_4 years              uint8\n",
-       "emp_length_5 years              uint8\n",
-       "emp_length_6 years              uint8\n",
-       "emp_length_7 years              uint8\n",
-       "emp_length_8 years              uint8\n",
-       "emp_length_9 years              uint8\n",
-       "emp_length_< 1 year             uint8\n",
-       "home_ownership_NONE             uint8\n",
-       "home_ownership_OTHER            uint8\n",
-       "home_ownership_OWN              uint8\n",
-       "home_ownership_RENT             uint8\n",
-       "purpose_credit_card             uint8\n",
-       "purpose_debt_consolidation      uint8\n",
-       "purpose_educational             uint8\n",
-       "purpose_home_improvement        uint8\n",
-       "purpose_house                   uint8\n",
-       "purpose_major_purchase          uint8\n",
-       "purpose_medical                 uint8\n",
-       "purpose_moving                  uint8\n",
-       "purpose_other                   uint8\n",
-       "purpose_renewable_energy        uint8\n",
-       "purpose_small_business          uint8\n",
-       "purpose_vacation                uint8\n",
-       "purpose_wedding                 uint8\n",
-       "dtype: object"
+       "1    36104\n",
+       "0     6431\n",
+       "Name: loan_status_new, dtype: int64"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2 = pd.get_dummies(df1, drop_first=True)\n",
-    "df2.dtypes"
+    "df2.dtypes\n",
+    "df2['loan_status_new'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 246,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    11963\n",
+      "0     2074\n",
+      "Name: loan_status_new, dtype: int64\n",
+      "1    24141\n",
+      "0     4357\n",
+      "Name: loan_status_new, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
     "X= df2.drop('loan_status_new', axis=1)\n",
     "y = df2['loan_status_new']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
+    "\n",
+    "print(y_test.value_counts())\n",
+    "print(y_train.value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 270,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roc auc score is 0.6033371458493324\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import roc_auc_score\n",
-    "#clf = LogisticRegression()\n",
+    "\n",
+    "clf = LogisticRegression(solver='lbfgs')\n",
+    "\n",
+    "#kf=KFold(10, random_state=1)\n",
     "# Fit the model on the trainng data.\n",
-    "#clf.fit(X_train, y_train)\n",
+    "\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "#clf_prediction_train=cross_val_predict(clf,X_train, y_train, cv=kf, method='predict_proba')\n",
+    "#train_roc = roc_auc_score(y_train, clf_prediction_train[:,1])\n",
+    "\n",
+    "pred = clf.predict_proba(X_test)\n",
+    "test_roc = roc_auc_score(y_test, pred[:,1])\n",
+    "\n",
+    "#print('train roc is '+ str(train_roc))\n",
+    "print('Roc auc score is '+ str(test_roc))\n",
     "# Print the accuracy from the testing data.\n",
-    "#print(roc_auc_score(clf.predict(X_test), y_test))"
+    "#print(roc_auc_score(y_test, clf.predict(X_test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 267,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/discriminant_analysis.py:388: UserWarning: Variables are collinear.\n",
-      "  warnings.warn(\"Variables are collinear.\")\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA [0.84518632 0.84624427 0.84318796] 0.8448728498099604\n",
-      "MNB [0.83872105 0.84389326 0.8355472 ] 0.839387171349085\n",
-      "RF [0.8381333  0.83977901 0.84036676] 0.8394263547666627\n"
+      "LDA [0.84568421 0.84577324 0.84514159] 0.8455330145555487\n",
+      "MNB [0.84094737 0.84219392 0.83440362] 0.8391816350012836\n",
+      "RF [0.83810526 0.83977261 0.84029898] 0.8393922832135607\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
       "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n",
       "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
@@ -1454,7 +1445,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR [0.84647937 0.84647937 0.84647937] 0.8464793699306453\n"
+      "LR [0.84705263 0.84703653 0.8471418 ] 0.8470769887134934\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
      ]
     }
    ],
@@ -1478,13 +1477,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
       "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
       "  \"of iterations.\", ConvergenceWarning)\n",
       "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
@@ -1500,54 +1514,83 @@
     {
      "data": {
       "text/plain": [
-       "(LogisticRegression(C=1e-05, class_weight=None, dual=False, fit_intercept=True,\n",
+       "(LogisticRegression(C=100, class_weight=None, dual=False, fit_intercept=True,\n",
        "           intercept_scaling=1, max_iter=100, multi_class='warn',\n",
        "           n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
        "           tol=0.0001, verbose=0, warm_start=False),\n",
-       " {'C': 1e-05},\n",
-       " 0.6433033045737886)"
+       " {'C': 100, 'class_weight': None},\n",
+       " 0.6369589885321794)"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Logistic Regression\n",
+    "\n",
     "clfl2=LogisticRegression(solver='lbfgs')\n",
-    "parameters = {\"C\":  [0.0000001,0.00001, 0.0001, 0.001, 0.1, 1, 10, 100]}\n",
+    "parameters = {\"C\":  [0.0000001,0.00001, 0.0001, 0.001, 0.1, 1, 10, 100],'class_weight':[None,'balanced']}\n",
     "fitmodel = GridSearchCV(clfl2, param_grid=parameters, cv=5, scoring=\"roc_auc\")\n",
     "fitmodel.fit(X_train, y_train)\n",
-    "fitmodel.best_estimator_, fitmodel.best_params_, fitmodel.best_score_\n",
-    "#fitmodel.grid_scores_"
+    "fitmodel.best_estimator_, fitmodel.best_params_, fitmodel.best_score_\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_estimators': 800}\n",
-      "0.6350752235120887\n"
+      "0.6033848258101502\n"
      ]
     }
    ],
    "source": [
+    "model=fitmodel.best_estimator_.fit(X_train, y_train)\n",
+    "predict = model.predict_proba(X_test)\n",
+    "roc = roc_auc_score(y_test, predict[:,1])\n",
+    "print(roc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': 1000}\n",
+      "0.6306511200151408\n",
+      "0.6280614625729235\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Forest Classifier\n",
+    "\n",
     "params = {'n_estimators': [600,800,1000]}\n",
     "grid_search = GridSearchCV(RandomForestClassifier(), param_grid=params,\n",
     "                                   scoring='roc_auc', cv=5, n_jobs=-1)\n",
     "grid_search.fit(X_train, y_train)\n",
     "print(grid_search.best_params_)\n",
-    "print(grid_search.best_score_)"
+    "print(grid_search.best_score_)\n",
+    "\n",
+    "model=grid_search.best_estimator_.fit(X_train, y_train)\n",
+    "predict = model.predict_proba(X_test)\n",
+    "roc = roc_auc_score(y_test, predict[:,1])\n",
+    "print(roc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1555,22 +1598,36 @@
      "output_type": "stream",
      "text": [
       "{'n_components': 1}\n",
-      "0.6758136727724052\n"
+      "0.6748973164731733\n",
+      "0.6751030640843662\n"
      ]
     }
    ],
    "source": [
+    "# Linear discriminant analysis\n",
+    "\n",
     "p = {'n_components': [1,2,3] }\n",
     "grid_search = GridSearchCV(LinearDiscriminantAnalysis(), param_grid=p,\n",
     "                                   scoring='roc_auc', cv=5, n_jobs=-1)\n",
     "grid_search.fit(X_train, y_train)\n",
     "print(grid_search.best_params_)\n",
-    "print(grid_search.best_score_)"
+    "print(grid_search.best_score_)\n",
+    "model=grid_search.best_estimator_.fit(X_train, y_train)\n",
+    "predict = model.predict_proba(X_test)\n",
+    "roc = roc_auc_score(y_test, predict[:,1])\n",
+    "print(roc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that LDA is providing the best result for the test set. LDA tries to identify attributes that account for the most variance between classes. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1635,8 @@
      "output_type": "stream",
      "text": [
       "{'alpha': 0}\n",
-      "0.6159323482807052\n"
+      "0.613376692131501\n",
+      "0.6129973961018186\n"
      ]
     },
     {
@@ -1586,17 +1644,26 @@
      "output_type": "stream",
      "text": [
       "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
+      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
       "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
      ]
     }
    ],
    "source": [
+    "# Multinomial NB \n",
+    "\n",
     "pa = {'alpha':[0,0.1,1]}\n",
     "grid_search = GridSearchCV(MultinomialNB(), param_grid=pa,\n",
     "                                   scoring='roc_auc', cv=5, n_jobs=-1)\n",
     "grid_search.fit(X_train, y_train)\n",
     "print(grid_search.best_params_)\n",
-    "print(grid_search.best_score_)"
+    "print(grid_search.best_score_)\n",
+    "\n",
+    "model=grid_search.best_estimator_.fit(X_train, y_train)\n",
+    "predict = model.predict_proba(X_test)\n",
+    "roc = roc_auc_score(y_test, predict[:,1])\n",
+    "print(roc)"
    ]
   },
   {
